Various updates - Adding of ArcGIS groups, changing default sort option.

--- a/search/templates/ScopeOptions.html
+++ b/search/templates/ScopeOptions.html
@@ -5,13 +5,49 @@
     <span data-dojo-attach-point="scopePlaceholderText"></span>
     <span class="dropdown-arrow"></span>
   </a>
-  <div class="btn-group" data-dojo-attach-point="btnGroup">
+  <div class="btn-group" id="btnGroup" data-dojo-attach-point="btnGroup">
     <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
       data-dojo-attach-point="MyContentToggle"
       data-dojo-attach-event="onClick: optionClicked"
       data-option-name="MyContent">
       ${i18n.search.scopeOptions.myContent}
     </button>
+    <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+      data-dojo-attach-point="ArcGISGroupToggle1"
+      data-dojo-attach-event="onClick: optionClicked"
+      data-option-name="ArcGISGroup1">
+      ${i18n.search.scopeOptions.ArcGISGroup1}
+    </button>
+      <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+              data-dojo-attach-point="ArcGISGroupToggle2"
+              data-dojo-attach-event="onClick: optionClicked"
+              data-option-name="ArcGISGroup2">
+          ${i18n.search.scopeOptions.ArcGISGroup2}
+      </button>
+      <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+              data-dojo-attach-point="ArcGISGroupToggle3"
+              data-dojo-attach-event="onClick: optionClicked"
+              data-option-name="ArcGISGroup3">
+          ${i18n.search.scopeOptions.ArcGISGroup3}
+      </button>
+      <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+              data-dojo-attach-point="ArcGISGroupToggle4"
+              data-dojo-attach-event="onClick: optionClicked"
+              data-option-name="ArcGISGroup4">
+          ${i18n.search.scopeOptions.ArcGISGroup4}
+      </button>
+      <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+              data-dojo-attach-point="ArcGISGroupToggle5"
+              data-dojo-attach-event="onClick: optionClicked"
+              data-option-name="ArcGISGroup5">
+          ${i18n.search.scopeOptions.ArcGISGroup5}
+      </button>
+      <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
+              data-dojo-attach-point="ArcGISGroupToggle6"
+              data-dojo-attach-event="onClick: optionClicked"
+              data-option-name="ArcGISGroup6">
+          ${i18n.search.scopeOptions.ArcGISGroup6}
+      </button>
     <button type="button" class="btn btn-sm btn-default" name="${id}_scope"
       data-dojo-attach-point="MyOrganizationToggle"
       data-dojo-attach-event="onClick: optionClicked"
@@ -25,4 +61,4 @@
       ${i18n.search.scopeOptions.ArcGISOnline}
     </button>
   </div>
-</div>
+    </div>
