--- a/search/templates/SortOptions.html
+++ b/search/templates/SortOptions.html
@@ -2,10 +2,8 @@
   <label for="${id}_select" >${i18n.search.sortOptions.prompt}</label> 
   <select id="${id}_select" 
     data-dojo-type="dijit/form/Select" data-dojo-attach-point="sortSelect">
-    <option value="" selected="selected">${i18n.search.sortOptions.relevance}</option>
+    <option value="">${i18n.search.sortOptions.relevance}</option>
     <option value="title">${i18n.search.sortOptions.title}</option>
-    <option value="owner">${i18n.search.sortOptions.owner}</option>
-    <option value="avgrating">${i18n.search.sortOptions.rating}</option>
     <option value="numviews">${i18n.search.sortOptions.views}</option>
     <option value="modified">${i18n.search.sortOptions.date}</option>
   </select>
